<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">Menu</string>
    <string name="app_name">IDEON</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_notes">ListNotes</string>
    <string name="title_activity_open_note">OpenNote</string>
    <string name="title_activity_list_notes_test">ListNotesTest</string>
    <string name="title_activity_index_note">indexNote</string>

    <!-- Activity main -->
    <string name="lb_hello">IDEON</string>
    <string name="bt_login">Log In</string>
    <string name="bt_logout">Log Out</string>
    <string name="ht_user_name">Nombre de usuario</string>
    <string name="ht_password">Contraseña</string>

    <!-- end Activity main -->

    <string name="bt_back">Regresar</string>
    <!-- Index activity note -->
    <string name="lb_index_note">Lista de notas</string>
    <string name="lb_index_total">Total de notas:</string>
    <string name="bt_new_note">Crear nota</string>
    <string name="lb_find_filter">Buscar por etiquetas</string>
    <!-- end activity note -->


    <!-- menu de nota -->
    <string name="lb_test">Test ver nota</string>
    <string name="lb_favotire">Favoritos</string>
    <string name="lb_delete">Borrar</string>
    <string name="lb_add_file">Agregar archivo</string>
    <string name="lb_edit_note">Editar nota</string>
    <string name="lb_note_son">Crear nota hija</string>
    <string name="lb_new_tags">Agregar tags</string>
    <string name="lb_move_note">Mover nota</string>
    <string name="lb_task_list">Lista de tareas</string>
    <string name="lb_add_fold">Agregar pliegue</string>
    <string name="lb_add_link">Agregar liga</string>
    <string name="lb_delete_link">Eliminar liga</string>
    <!-- Fin de menu de nota -->


    <!-- menu de nota borrada -->
    <string name="lb_restore">Restaurar nota</string>
    <!-- Fin de menu de nota borrada -->


    <!-- Activity new note -->
    <string name="lb_new_note">Nueva nota</string>
    <string name="bt_new">Guardar</string>
    <string name="lb_title">Titulo:</string>
    <string name="ht_title">Titulo</string>
    <string name="lb_body">Cuerpo de nota:</string>
    <string name="ht_body">Cuerpo de nota</string>
    <string name="lb_tags">Tags:</string>
    <!-- end activity new note -->


    <!-- Activity edit note -->

    <string name="bt_update">Actualizar</string>
    <string name="lb_save">Actualizar</string>
    <!-- end activity edit note -->

    <string name="title_activity_index">index</string>
    <string name="title_activity_new">New</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_note_manager_test">NoteManagerTest</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_new_note">NewNote</string>
    <string name="title_activity_edit_note">EditNote</string>
    <string name="title_activity_view_note">ViewNote</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_create_son_note">CreateSonNote</string>
    <string name="title_activity_list_deleted_notes">ListDeletedNotes</string>
    <string name="title_activity_view_deleted_note">ViewDeletedNote</string>
    <string name="title_activity_register">register</string>

    <!-- Nombres de los items -->
    <string-array name="nav_drawer_items">
        <item>Notas</item>
        <item>Favoritas</item>
        <item>Notas eliminadas</item>
        <item>Tags</item>
        <item>Configuraciones</item>
        <item>LogOut</item>
    </string-array>

    <!-- Iconos de los items -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_sections_notes</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_trash</item>
        <item>@drawable/ic_new_tag</item>
        <item>@drawable/ic_sections_settings</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_list_tags">ListTags</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
