<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.view.EditNote">

    <item android:id="@+id/action_edit_tag"
        android:title="@string/lb_new_tags"
        android:icon="@drawable/ic_new_tag"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_task_list_edit"
        android:title="@string/lb_task_list"
        android:icon="@drawable/ic_task_list"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_add_file_edit"
        android:title="@string/lb_add_file"
        android:icon="@drawable/ic_add_file"
        app:showAsAction="always"
    />
    <item
        android:id="@+id/action_edit_fold"
        android:title="@string/lb_add_fold"
        android:icon="@drawable/ic_fold"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_save"
        android:title="@string/lb_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"
        />
</menu>
