<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.view.ListDeletedNotes">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_logOut" android:title="@string/bt_logout"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_newNote"
        android:title="@string/lb_new_note"
        android:icon="@drawable/ic_new_note"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:title="@string/lb_delete"
        android:icon="@drawable/ic_trash"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
