<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.view.NewNote">
    <item android:id="@+id/action_new_tag"
        android:title="@string/lb_new_tags"
        android:icon="@drawable/ic_new_tag"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_taskListNew"
        android:title="@string/lb_task_list"
        android:icon="@drawable/ic_task_list"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_file"
        android:title="@string/lb_add_file"
        android:icon="@drawable/ic_add_file"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_add_fold"
        android:title="@string/lb_add_fold"
        android:icon="@drawable/ic_fold"
        app:showAsAction="always"
        />
</menu>
