<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/scrollView2" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ht_title"
                android:id="@+id/titleView"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ht_body"
                android:id="@+id/bodyView"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </ScrollView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:id="@+id/listViewnoteSon"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.15" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewLinks" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/scrollView3" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_tags"
                android:id="@+id/viewTags"
                android:layout_gravity="left" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
